OHRM5X-1913: OXD buzz post input not showing line breaks in firefox fix

--- a/components/src/core/components/Buzz/buzz-post-input.scss
+++ b/components/src/core/components/Buzz/buzz-post-input.scss
@@ -31,6 +31,7 @@
     width: 98%;
     resize: none;
     text-align: justify;
+    white-space: pre-wrap;
     word-break: break-word;
     box-sizing: border-box;
     padding: $oxd-buzz-post-input-margin;
