--- a/components/src/core/components/Tab/tab-container.scss
+++ b/components/src/core/components/Tab/tab-container.scss
@@ -19,6 +19,7 @@
 @import 'variables';
 
 .oxd-tab {
+  touch-action: pan-y !important;
   &-bar {
     padding: $oxd-tab-bar-padding;
   }
